@@ -28,6 +28,7 @@ Changelog
  * Fix: All templates with wagtailsettings and modeladmin now use `block.super` for `extra_js` & `extra_css` (Timothy Bautista)
  * Fix: Layout issue when using FieldRowPanel with a heading (Andreas Bernacca)
  * Fix: `file_size` and `file_hash` not updated when Document file changed (Andreas Bernacca)
+ * Fix: Fixed order of URLs in project template so that static / media URLs are not blocked (Nick Smith)
 
 2.7 LTS (06.11.2019)
 ~~~~~~~~~~~~~~~~~~~~
